# ChangeLog for app-crypt/heimdal
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-crypt/cvs-repo/gentoo-x86/app-crypt/heimdal/ChangeLog,v 1.79 2005/06/30 02:28:38 kumba Exp $

  29 Jun 2005; Joshua Kinard <kumba@gentoo.org> heimdal-0.6.5.ebuild:
  Marked stable on mips.

  28 Jun 2005; Bryan Østergaard <kloeri@gentoo.org> heimdal-0.6.5.ebuild:
  Stable on alpha + ia64, bug 96727.

  27 Jun 2005; Michael Hanselmann <hansmi@gentoo.org> heimdal-0.6.5.ebuild:
  Stable on hppa.

  27 Jun 2005; Seemant Kulleen <seemant@gentoo.org> heimdal-0.6.5.ebuild:
  stable x86 and amd64 because of bug 96727

  24 Jun 2005; Gustavo Zacarias <gustavoz@gentoo.org>
  +files/krb4-build.patch, heimdal-0.6.5.ebuild:
  Fixed USE=krb4 build, stable on sparc wrt #96727

  24 Jun 2005; Seemant Kulleen <seemant@gentoo.org> heimdal-0.6.5.ebuild:
  add revdep alert to this about com_err as well

  22 Jun 2005; Michael Hanselmann <hansmi@gentoo.org> heimdal-0.6.5.ebuild:
  Stable on ppc (#96727).

  24 Jun 2005; Seemant Kulleen <seemant@gentoo.org> heimdal-0.6.5.ebuild:
  add revdep alert to this about com_err as well

*heimdal-0.6.5 (21 Jun 2005)

  21 Jun 2005; Seemant Kulleen <seemant@gentoo.org> +heimdal-0.6.5.ebuild:
  version bump for security fix, bug #96727 by Sune Kloppenborg Jeppesen
  <jaervosz@gentoo.org>. Will add 0.7 once this one goes stable.

  07 Jun 2005; Seemant Kulleen <seemant@gentoo.org> heimdal-0.6.4-r1.ebuild:
  Thanks to AZ for fixing this even better -- the tests should work, and we
  have the X use flag thanks to Anthony- in #gentoo-apache, of all places. Az
  fixed the virtualx eclass earlier to make X an optional dep too.

*heimdal-0.6.4-r1 (06 Jun 2005)

  06 Jun 2005; Seemant Kulleen <seemant@gentoo.org>
  +heimdal-0.6.4-r1.ebuild:
  revision bump to fix several bugs: 1. bug #45682 by Andrea Cerrito
  <is@gentestrana.net> which means neither heimdal nor mit-krb5 will overwrite