@@ -1,14 +1,10 @@
-MD5 5fdab78691e354c146c36ececfe4e349 ChangeLog 13140
-MD5 8ff78d3463eb4bbfdd4d0cdf29ac937c heimdal-0.6.4.ebuild 2805
-MD5 6f4f0246f8037a5ce93b840ab15570c5 heimdal-0.6.4-r1.ebuild 3524
-MD5 874d688f79941bcac10d8087ab85e4f0 heimdal-0.6.5.ebuild 3802
 MD5 6c9cbfc951ebeca1a88d8722de4dde80 metadata.xml 231
-MD5 64ac3c23dcd54135648853869219dad6 files/digest-heimdal-0.6.4 147
-MD5 695b4c971cc27af8d7c24c69d7646f26 files/digest-heimdal-0.6.4-r1 147
-MD5 c9a17d0a75733352c1e45b1d1c4470b1 files/digest-heimdal-0.6.5 147
-MD5 f51748af8baa63a8eecdb0ba7a0106cc files/krb4-build.patch 853
+MD5 72ae30b8de931ad2627dc60f41b90810 ChangeLog 13276
+MD5 874d688f79941bcac10d8087ab85e4f0 heimdal-0.6.5.ebuild 3802
 MD5 0becad2fb5b2e15b30b47b2939304647 files/heimdal-kadmind 546
 MD5 2be6ab7b49a076e078f34913d65bcaad files/heimdal-kdc 514
 MD5 f4811d443f68fe11946a031ada8ce125 files/heimdal-kpasswdd 551
 MD5 06ae43d9ec1ce6f03630f6bd5e1631eb files/krb5-kdc.schema 4051
 MD5 0f222a777af729dc4d6076ab03342056 files/krb5.conf 423
+MD5 c9a17d0a75733352c1e45b1d1c4470b1 files/digest-heimdal-0.6.5 147
+MD5 f51748af8baa63a8eecdb0ba7a0106cc files/krb4-build.patch 853
