@@ -1,2 +1,0 @@
-MD5 bea97a1d3bedfd281eb66cc87efba023 heimdal-0.6.4.tar.gz 3329293
-MD5 61dd7a02880b22b501b21ef1f2bcc5a9 heimdal-0.6-gentoo-patches-0.1.tar.bz2 3952
