@@ -1,2 +1,0 @@
-MD5 bea97a1d3bedfd281eb66cc87efba023 heimdal-0.6.4.tar.gz 3329293
-MD5 ccd665667880725c4c65169871d1a564 heimdal-0.6-gentoo-patches-0.2.tar.bz2 6802
