@@ -1,6 +1,10 @@
 # ChangeLog for app-crypt/heimdal
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-crypt/cvs-repo/gentoo-x86/app-crypt/heimdal/ChangeLog,v 1.79 2005/06/30 02:28:38 kumba Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-crypt/cvs-repo/gentoo-x86/app-crypt/heimdal/ChangeLog,v 1.80 2005/07/18 15:12:35 seemant Exp $
+
+  18 Jul 2005; Seemant Kulleen <seemant@gentoo.org> -heimdal-0.6.4.ebuild,
+  -heimdal-0.6.4-r1.ebuild:
+  remove crufted out versions
 
   29 Jun 2005; Joshua Kinard <kumba@gentoo.org> heimdal-0.6.5.ebuild:
   Marked stable on mips.
